--- a/src/views/jurisdiction/manage.html
+++ b/src/views/jurisdiction/manage.html
@@ -130,7 +130,7 @@
         <div id="page-box"></div>
       </div>
     </div>
-    <div id="dialong-box" class="dialog-box">
+    <div id="dialog-box" class="dialog-box">
       <div id="dialog-article" class="dialog-article">
         <div id="dialog-tree-fuc-box" class="dialog-tree-fuc-box">
           <div class="left">
