--- a/src/views/payment/list.html
+++ b/src/views/payment/list.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="../../layuiadmin/style/student.css">
     <link rel="stylesheet" href="../../layuiadmin/style/formBox.css">
     <link rel="stylesheet" href="../../layuiadmin/style/sideUpaload.css">
+    <link rel="stylesheet" href="../../layuiadmin/style/dialog.css">
     <link rel="stylesheet" href="../../layuiadmin/style/table.css">
 </head>
 
@@ -32,6 +33,8 @@
                 <div class="header">操作</div>
                 <div class="article">
                     <button id="searchBt" class="layui-btn"><i class="layui-icon layui-icon-search"></i>查找缴费记录</button>
+                    <button class="layui-btn" onclick="handlePaymentDetail()"><i
+                            class="layui-icon layui-icon-list"></i>查看缴费明细</button>
                     <button onclick="exportLi()" class="layui-btn"><i
                             class="layui-icon layui-icon-export"></i>导出缴费记录</button>
                     <button onclick="sub.style.display = 'block'" class="layui-btn"><i
@@ -99,6 +102,19 @@
                 </div>
             </div>
         </div>
+        <div id="dialog-box" class="dialog-box">
+            <div id="dialog-article" class="dialog-article">
+                <div id="dialog-detai-table">
+                    <div class="header">
+                        <div class="title">配置金额</div>
+                        <div onclick="closeDialog()"><i class="layui-icon layui-icon-close"></i></div>
+                    </div>
+                    <div class="article">
+                        <table id="detail-list" lay-filter="test"></table>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="side-upload" id="sideUpload">
             <div class="header">
                 <div>下载列表</div>
@@ -123,9 +139,6 @@
         reloadTable();
 
 
-
-
-
         // ----------table组件相关------------------
         //  初始化table
         layui.use(['table', 'layer', 'form'], function () {
@@ -141,11 +154,11 @@
                 , data: []
                 , page: true //开启分页
                 , cols: [[ //表头
-                    //   { checkbox: true, width: "5%" }
-                    { field: 'id', title: 'ID', width: "5%", minWidth: 60 }
+                    { checkbox: true, width: "5%" }
+                    , { field: 'id', title: 'ID', width: "5%", minWidth: 60 }
                     , { field: 'name', title: '姓名', width: "10%", minWidth: 60 }
                     , { field: 'pid', title: '身份证号', width: "15%", minWidth: 200 }
-                    , { field: 'schoolname', title: '学校', width: "15%", minWidth: 100 }
+                    , { field: 'schoolname', title: '学校', width: "10%", minWidth: 100 }
                     , { field: 'order_id', title: '订单ID', width: "10%", minWidth: 100 }
                     , { field: 'student_id', title: '学生ID', width: "10%", minWidth: 100 }
                     , { field: 'openid', title: '缴费人公开ID', width: "15%", minWidth: 100 }
@@ -212,10 +225,11 @@
                             , height: 470
                             , data: tabData
                             , cols: [[ //表头
-                                { field: 'id', title: 'ID', width: "5%", minWidth: 60 }
+                                { checkbox: true, width: "5%" }
+                                , { field: 'id', title: 'ID', width: "5%", minWidth: 60 }
                                 , { field: 'name', title: '姓名', width: "10%", minWidth: 60 }
                                 , { field: 'pid', title: '身份证号', width: "15%", minWidth: 200 }
-                                , { field: 'schoolname', title: '学校', width: "15%", minWidth: 100 }
+                                , { field: 'schoolname', title: '学校', width: "10%", minWidth: 100 }
                                 , { field: 'order_id', title: '订单ID', width: "10%", minWidth: 100 }
                                 , { field: 'student_id', title: '学生ID', width: "10%", minWidth: 100 }
                                 , { field: 'openid', title: '缴费人公开ID', width: "15%", minWidth: 100 }
@@ -280,6 +294,7 @@
     </script>
     <script src="../../layuiadmin/modules/search.js"></script>
     <script src="../../layuiadmin/modules/exportInfo.js"></script>
+    <script src="../../layuiadmin/modules/dialog.js"></script>
 </body>
 
 </html>
