--- a/src/views/payment/list.html
+++ b/src/views/payment/list.html
@@ -106,7 +106,7 @@
             <div id="dialog-article" class="dialog-article">
                 <div id="dialog-detai-table">
                     <div class="header">
-                        <div class="title">配置金额</div>
+                        <div class="title">缴费明细</div>
                         <div onclick="closeDialog()"><i class="layui-icon layui-icon-close"></i></div>
                     </div>
                     <div class="article">
